# PiKite

./: Kill_PiKite.sh  PiKite.py  PiKite_Settings.ini  README.md  launcher.sh  menu.xml  pyproject.toml  websocket_server.py
src/pikite/: __init__.py  __main__.py
src/pikite/config/: default_settings.ini  pikite_settings.ini
src/pikite/core/: __init__.py  constants.py  input_handler.py  lcd_menu.py  logger.py  settings.py  timer.py
src/pikite/hardware/: __init__.py  button_controller.py  button_input.py  camera_controller.py  display_controller.py  pressure_sensor_controller.py  servo_controller.py
src/pikite/remote/: __init__.py  microdot_server.py
src/pikite/static/menus/: lcd_menu.xml
src/pikite/system/: __init__.py  power_management.py  storage.py
tests/: button_test.py  camera_test.py  display_controller_test.py  menu_test.py  pressure_sensor_test.py  servo_controller_test.py  timer_test.py
webapp/: focus.html  index.html
webapp/css/: main.css  material.css  mdl.css
webapp/js/: websocket-client.js
